--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: HivenAPI
 version: '${project.version}'
 main: fr.hivenapi.Main
-authors: [ Deglam, 0xKanoe ]
+authors: [ Awezial ]
 website: https://hivenstudio.fr/author/api
 commands:
   nick:
